discussion/kv_engine/141636/141636_rev44_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Use ifconfig in testapp [2.3/3]

Define the bootstrap interfaces in testapp and explicitly define
the other interfaces on top of those by using ifconfig

Change-Id: Iad7d4b960cdc85fed8a595621137a50c04b3026e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-09 17:31:16.000000000
Message: 
Uploaded patch set 44.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 18:22:52.000000000
Message: 
Patch Set 44: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9694/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9694/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9694/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8290/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36656/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/229/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31328/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10342/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19273/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11269/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11688/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11417/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
